tests/profile/error/camera/wrongvalue_type.profile
{
  "version": { "major": 1, "minor": 0 },
  "camera": {
    "type": "ABC"
  }
}
